@@ -1,6 +1,6 @@
-﻿#include "ustring.h"
-#include "util.h"
-#include "luafar.h"
+﻿#include "lf_string.h"
+#include "lf_util.h"
+#include "lf_luafar.h"
 
 extern int bit64_pushuserdata(lua_State *L, INT64 v);
 extern int bit64_getvalue(lua_State *L, int pos, INT64 *target);
