@@ -2,7 +2,7 @@
 #include <windows.h>
 #include <stdlib.h>
 #include <signal.h>
-#include "luafar.h"
+#include "lf_luafar.h"
 
 #ifdef _MSC_VER
 #define LUAPLUG WINAPI
