@@ -31,8 +31,8 @@
     <ClCompile Include="luafar\luaplug.c" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="luafar\luafar.h" />
-    <ClInclude Include="luafar\version.h" />
+    <ClInclude Include="luafar\lf_luafar.h" />
+    <ClInclude Include="luafar\lf_version.h" />
     <ClInclude Include="luasdk\include\lauxlib.h" />
     <ClInclude Include="luasdk\include\lua.h" />
     <ClInclude Include="luasdk\include\lualib.h" />
