@@ -16,24 +16,24 @@ DOCS = \
 	luasdk\$(VERSION_LUASDK)\$(BITPREFIX)$(DIRBIT)\lua51.dll \
 
 LINK_OBJS = \
-$(INTDIR)\bit64.obj \
-$(INTDIR)\exported.obj \
-$(INTDIR)\farhost.obj \
+$(INTDIR)\lf_bit64.obj \
+$(INTDIR)\lf_exported.obj \
+$(INTDIR)\lf_farhost.obj \
 $(INTDIR)\flags.obj \
 $(INTDIR)\keysandcolors.obj \
-$(INTDIR)\lflua.obj \
-$(INTDIR)\lregex.obj \
-$(INTDIR)\luamacro.obj \
-$(INTDIR)\lusercontrol.obj \
-$(INTDIR)\reg.obj \
-$(INTDIR)\service.obj \
-$(INTDIR)\slnunico.obj \
-$(INTDIR)\lutf8lib.obj \
-$(INTDIR)\uliolib51.obj \
-$(INTDIR)\uloadlib51.obj \
-$(INTDIR)\ustring.obj \
-$(INTDIR)\util.obj \
-$(INTDIR)\win.obj \
+$(INTDIR)\lf_lua.obj \
+$(INTDIR)\lf_regex.obj \
+$(INTDIR)\lf_luamacro.obj \
+$(INTDIR)\lf_usercontrol.obj \
+$(INTDIR)\lf_reg.obj \
+$(INTDIR)\lf_service.obj \
+$(INTDIR)\lf_slnunico.obj \
+$(INTDIR)\lf_utf8lib.obj \
+$(INTDIR)\lf_liolib51.obj \
+$(INTDIR)\lf_loadlib51.obj \
+$(INTDIR)\lf_string.obj \
+$(INTDIR)\lf_util.obj \
+$(INTDIR)\lf_win.obj \
 $(INTDIR)\lptree.obj \
 $(INTDIR)\lpcap.obj \
 $(INTDIR)\lpcode.obj \
